# scan-provider-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/rplidar/: CMakeLists.txt
lib/rplidar/src/: sl_lidar_driver.cpp
lib/rplidar/src/arch/linux/: net_socket.cpp
scan_provider/: CMakeLists.txt  scan_provider
scan_provider/config/: config.ini
scan_provider/include/: INIReader.h  LidarConnection.h  definitions.h
scan_provider/src/: LidarConnection.cpp  main.cpp  main.cpp.bak  main_to_csv.cpp.bak
